--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
         <title>
             {% block titulo %}{% endblock %}
         </title>
-        <link rel="stylesheet" href="{{ url_for('static', filename='estilos.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/estilos.css') }}">
     </head>
     <body>
         <img  src="{{ url_for('static', filename='imagenes/logo.png') }}" class="center">
